# Hermes

./: .gitignore  CMakeLists.txt  README.md  benchmarks.md  generate_ticks.py
benchmarks/: bench_queue.cpp  historical_parser.cpp  latency_benchmark.cpp  latency_rdtsc.cpp  ram_benchmark.cpp  test_affinity.cpp  test_engine.cpp  test_queue.cpp
src/: LockFreeStack.hpp  MPMCQueue.hpp  MutexQueue.hpp  SPSCOmptimisedQueue.hpp  SPSCQueue.hpp  engine.hpp  order_book.hpp  os_utils.hpp
